having an img routing problem

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,3 +4,24 @@
     <dd data-magellan-arrival="js"><a href="#js">Arrival 2</a></dd>
   </dl>
 </div>
+
+<ul class="example-orbit" data-orbit>
+  <li>
+    <img src="picture1-jpg.png" alt="slide 1" />
+    <div class="orbit-caption"> Caption One. </div> 
+  </li> 
+  <li>
+    <img src="http://placeimg.com/1200/201/arch" alt="slide 2" /> 
+    <div class="orbit-caption"> Caption Two. </div> 
+  </li>
+  <li> 
+    <img src="http://placeimg.com/1200/201/arch" alt="slide 3" /> 
+    <div class="orbit-caption"> Caption Three. </div> 
+  </li>
+</ul>
+
+<ul class="clearing-thumbs" data-clearing>
+  <li><a href="#"><img src="http://placeimg.com/1200/201/arch"></a></li>
+  <li><a href="#"><img src="picture2"></a></li>
+  <li><a href="#"><img src="picture3"></a></li>
+</ul>
